app/assets/sass/components/_project-detail.scss
.projectDetail {
  .cta-box {
    width: 50%;
    margin: 0 auto;
  }
  .cta-box .btn {
    width: 50%;
  }
  section {
    margin-top: 1em;
    h2 {
      margin-top: 0;
    }
  }
  .splitTwo section:first-child {
    margin-right: 2em;
  }
  .project-img {
    flex: 2;
    img {
      display: block;
      max-height: 30em;
      width: auto;
      margin: 0 auto;
    }
  }
  .project-skills {
    flex: 1;
    animation: 0.4s ease-out 0s 1 fadeIn;
  }

  .suggestion {
    margin-top: 5em;
    .btn {
      display: block;
      text-align: center;
      margin: 0 auto;
      width: 12em;
    }
  }
}
@media (max-width: $breakpoint-medium) {
  .projectDetail {
    .project-img {
      flex: 1.5;
    }
    .cta-box {
      width: 75%;
    }
  }
}
@media (max-width: $breakpoint-small) {
  .projectDetail {
    .project-img {
      img {
        width: 100%;
      }
    }
    .splitTwo section:first-child {
      margin-right: 0;
    }
    .splitTwo {
      flex-direction: column;
    }
    .cta-box {
      width: 100%;
    }
  }
}

